--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: binance-telegram-bot
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python bot.py"
+    startCommand: "bot.py"
     envVars:
-      - key: TELEGRAM_BOT_TOKEN
+      - key: BOT_TOKEN
         value: "8021146799:AAFYJR3G72OS3Xk_kmA79aG1XZdiudcLLDs"
-      - key: TELEGRAM_CHAT_ID
+      - key: CHAT_ID
         value: "6419058496"
