--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,9 @@
 services:
   - type: web
-    name: binance-telegram-bot
+    name: bot
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "bot.py"
+    startCommand: "python bot.py"
     envVars:
       - key: BOT_TOKEN
         value: "8021146799:AAFYJR3G72OS3Xk_kmA79aG1XZdiudcLLDs"
